proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/additional_type_assign.py
# Test that you are not allowed to use types on the right sides of assignments.
# They are only allowed for target variables.
x = 4
y::int = x::int
